--- a/css/style.css
+++ b/css/style.css
@@ -1728,7 +1728,7 @@ a {
     font-size: 30px;
 }
 
-@media (min-width: 320px) and (max-width: 480px) {
+@media (min-width: 320px) and (max-width: 520px) {
     .container{
         width: 440px;
     }
@@ -1850,7 +1850,7 @@ a {
     }
     .partners-links:nth-child(1),
     .partners-links:nth-child(3){
-        margin: 0 30px 0 0;
+        margin: 0 0 0 0;
     }
     .footer{
         width: 440px;
