--- a/css/style.css
+++ b/css/style.css
@@ -1728,7 +1728,7 @@ a {
     font-size: 30px;
 }
 
-@media (min-width: 320px) and (max-width: 480px) {
+@media (max-width: 480px) {
     .container{
         width: 440px;
     }
