--- a/css/style.css
+++ b/css/style.css
@@ -1604,134 +1604,36 @@ a {
     color: #959595;
 }
 
-.burger {
-    display: none;
+.toggle-menu ul {
+    display: table;
+    width: 31px;
+    margin-left: 0;
+    padding-left: 0;
+    margin: 5px
 }
 
-.menu-toggle {
-    display: block;
-    position: relative;
-    top: 9px;
-    left: -5px;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+.toggle-menu ul li {
+    width: 100%;
+    height: 3px;
+    background-color: #fff;
+    margin-bottom: 4px;
+    list-style: none
 }
 
-.menu-toggle input {
-    display: block;
-    width: 50px;
-    height: 50px;
-    position: absolute;
-    top: -7px;
-    left: -5px;
-    cursor: pointer;
-    z-index: 2;
-    opacity: 0;
-    -webkit-touch-callout: none;
+.toggle-menu ul li:last-child {
+    margin-bottom: 0
 }
 
-.menu-toggle span {
-    display: block;
-    width: 40px;
-    height: 4px;
-    z-index: 1;
-    border-radius: 4px;
-    position: relative;
-    background: #fff;
-    margin-bottom: 7px;
-    -webkit-transform-origin: 4px 0px;
-    transform-origin: 4px 0px;
-    transition: background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
-        opacity 0.55s ease,
-        -webkit-transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
-    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
-        background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
-        opacity 0.55s ease;
-    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
-        background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0),
-        opacity 0.55s ease,
-        -webkit-transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
+input[type=checkbox],
+label {
+    display: none
 }
 
-.menu-toggle span:first-child {
-    -webkit-transform-origin: 0% 0%;
-    transform-origin: 0% 0%;
-    transition: width, 0.5s;
-}
-
-
-.menu-toggle span:nth-last-child(2) {
-    -webkit-transform-origin: 0% 100%;
-    transform-origin: 0% 100%;
-    width: 40px;
-    transition: width, 0.5s;
-}
-
-.menu-toggle input:checked~span {
-    opacity: 1;
-    -webkit-transform: rotate(45deg) translate(0px, 0px);
-    transform: rotate(45deg) translate(0px, 0px);
-    background: #fff;
-    width: 36px;
-    transition: width, 0.5s;
-}
-
-.menu-toggle input:checked~span:nth-last-child(3) {
-    opacity: 0;
-    -webkit-transform: rotate(0deg) scale(0.2, 0.2);
-    transform: rotate(0deg) scale(0.2, 0.2);
-}
-
-.menu-toggle input:checked~span:nth-last-child(2) {
-    opacity: 1;
-    -webkit-transform: rotate(-45deg) translate(0, 0px);
-    transform: rotate(-45deg) translate(0, 0px);
-    width: 36px;
-}
-
-.burger-menu-elem {
-    display: none;
-    position: absolute;
-    width: 400px;
-    height: 100vh;
-    margin: -100px 0 0 -60px;
-    padding: 50px;
-    padding-top: 125px;
-    background: #1a1514;
-    list-style-type: none;
-    -webkit-transform: translate(-100%, 0%);
-    transform: translate(-100%, 0%);
-    -webkit-transform-origin: 0% 0%;
-    transform-origin: 0% 0%;
-    transition: -webkit-transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
-    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
-    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0), -webkit-transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
-}
-
-.burger-menu-links {
-    font-family: Montserrat-light;
-    font-size: 14px;
-    line-height: 1.2;
-    color: #ffffff;
-}
-
-.menu-toggle input:checked~ul {
-    -webkit-transform: scale(1.0, 1.0);
-    transform: scale(1.0, 1.0);
-    opacity: 1;
-}
-
-.burger-menu-elem li {
-    padding: 10px 0;
-    font-size: 30px;
-}
-
-@media (max-width: 480px) {
-    .container{
+@media (max-width: 575px) {
+    .container {
         width: 440px;
     }
+
     .header {
         width: 440px;
         min-height: 150px;
@@ -1745,11 +1647,57 @@ a {
         float: left;
     }
 
-    .burger {
-        display: block;
+    input[type=checkbox] {
+        position: absolute;
+        top: -7777px;
+        left: -7777px;
+        background: none
     }
 
-    .header-menu,
+    input[type=checkbox]:focus {
+        background: none
+    }
+
+    .toggle-menu {
+        float: right;
+        display: inline-block;
+        cursor: pointer;
+        margin-right: 25px
+    }
+
+    input[type=checkbox]:checked~nav {
+        display: block
+    }
+
+    .header-navbar {
+        display: none;
+        position: absolute;
+        right: 21px;
+        top: 90px;
+        background-color: #362f2d;
+        padding: 0;
+        z-index: 99
+    }
+
+    .header-menu {
+        width: 200px
+    }
+
+    .header-menu-items {
+        float: none;
+        padding: 0;
+        width: 100%;
+        display: table
+    }
+
+    .header-menu-link {
+        color: #FFF;
+        font-size: 15px;
+        padding: 10px 20px;
+        display: block;
+        border-bottom: 1px solid rgba(225, 225, 225, 0.1)
+    }
+
     .header-cart,
     .header-search,
     .slider {
@@ -1826,9 +1774,11 @@ a {
         width: 440px;
         padding: 50px 0;
     }
-    .recent-posts-txt{
+
+    .recent-posts-txt {
         width: 400px;
     }
+
     .recent-posts-cards-wrapper {
         flex-wrap: wrap;
         justify-content: center;
@@ -1837,29 +1787,36 @@ a {
     .recent-posts-cards-wrapper>.recent-posts-card:nth-child(2) {
         margin: 0;
     }
-    .recent-posts-card-txt{
+
+    .recent-posts-card-txt {
         width: 300px;
     }
-    .partners{
+
+    .partners {
         width: 440px;
         background-size: cover;
         padding: 50px 0;
     }
-    .partners-wrapper{
+
+    .partners-wrapper {
         justify-content: center;
     }
+
     .partners-links:nth-child(1),
-    .partners-links:nth-child(3){
+    .partners-links:nth-child(3) {
         margin: 0 0 0 0;
     }
-    .footer{
+
+    .footer {
         width: 440px;
         padding: 0;
     }
-    .footer-wrapper{
+
+    .footer-wrapper {
         display: none;
     }
-    .footer-copyright{
+
+    .footer-copyright {
         width: 440px;
         padding: 30px 10px;
     }
